--- a/src/style.css
+++ b/src/style.css
@@ -39,6 +39,7 @@ body {
   width: 100%;
   overflow: hidden;
   background: var(--bg);
+  border: 0.5px solid rgba(0, 0, 0, 0.05);
   border-radius: 10px;
 }
 
